# litf

./: .gitignore  Gemfile  LICENSE  Makefile  Pipfile  README.md  _config.yml  index.html  session_end.json  session_start.json  test.py  test_collection.json  test_result.json
_data/: docs.yml
_docs/: comparison.md  index.md
_docs/spec/0.0.1/: README.md  litf_start-examples-0.md  litf_start-properties-the-_type-schema.md  litf_start-properties-the-litf_version-schema.md  litf_start-properties.md  litf_start.md  session_end-default.md  session_end-definitions.md  session_end-examples-0.md  session_end-properties-_type.md  session_end-properties-error.md  session_end-properties-failed.md  session_end-properties-passed.md  session_end-properties-skipped.md  session_end-properties-the-_type-schema.md  session_end-properties-the-error-schema.md  session_end-properties-the-failed-schema.md  session_end-properties-the-passed-schema.md  session_end-properties-the-skipped-schema.md  session_end-properties-the-total_duration-schema.md  session_end-properties-total_duration.md  session_end-properties.md  session_end.md  session_start.md  (+67 more)
_includes/: topnav.html
assets/css/: main.scss
examples/: pytest  pytest_collect_only
scripts/: pyproject.toml  test.py  validate_litf_stream.py
spec/: README.md  litf_start.json  session_end.json  session_start.json  test_result.json
spec/0.0.1/: litf_start.json  litf_start.schema.json  session_end.json  session_end.schema.json  session_start.schema.json  test_collection.json  test_collection.schema.json  test_result.schema.json
