[tool.poetry]
name = "litf"
version = "0.1.0"
description = ""
authors = ["Boris Feld <lothiraldan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
jsonschema = "^2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
